modificacion de los div

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-ECHO is on.
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Parte 4</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+</head>
+<body>
+    <div class="orange">Laboratoria</div>
+    <div class="black">es</div>
+    <div class="orange">TRANSFORMACIÓN</div>
+
+
+    <script type="text/javascript" src="js/app.js"></script>
+</body>
+</html>
