--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="orange">Laboratoria</div>
     <div class="black">es</div>
-    <div class="orange">TRANSFORMACIÓN</div>
+    <div class="orange-one">TRANSFORMACIÓN</div>
 
 
     <script type="text/javascript" src="js/app.js"></script>
